libs/bng/test/negative/N0211_rxn_rev_no_product.bngl
# FAIL
# OUTPUT: error: syntax error, unexpected <->, expecting end

begin parameters
   kp 0.00001
   km 1
end parameters

begin molecule types
   A(a,p~0~1)
end molecule types

begin reaction rules
  <-> A(a) kp, km
end reaction rules
